# ghost_post

./: db.sqlite3  pyproject.toml
ghost_app/: admin.py  apps.py  forms.py  models.py  views.py
ghost_app/migrations/: 0001_initial.py
ghost_post/: settings.py  urls.py
templates/: boasts.html  form.html  index.html  roasts.html  votes.html
